Fixed z-index of a clustered public transit stops marker

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -122,6 +122,11 @@
 @popover-max-width:                     360px;
 
 
+// Cluster
+// ---
+@cluster-z-index: 1000;
+
+
 // Focus states
 // ------------------------------
 
